--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,19 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": ["angular.ng-template"]
+  "recommendations": [
+    "Angular.ng-template",
+    "cyrilletuzi.angular-schematics",
+    "DavidAnson.vscode-markdownlint",
+    "dbaeumer.vscode-eslint",
+    "EditorConfig.EditorConfig",
+    "esbenp.prettier-vscode",
+    "johnpapa.angular2",
+    "mariusAlchimavicius.json-to-ts",
+    "SonarSource.sonarlint-vscode",
+    "steoates.autoimport",
+    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-spanish",
+    "stringham.move-ts",
+    "usernamehw.errorlens"
+  ]
 }
