--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["devkit", "fontawesome", "fortawesome", "popperjs", "toastr"]
+  "cSpell.words": ["deserializa", "devkit", "fontawesome", "fortawesome", "popperjs", "toastr"]
 }
