--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-select/ng-select": "^11.1.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
