Renombradas constanter upper case

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
         ],
         "@typescript-eslint/no-param-reassign": "off",
         "@typescript-eslint/no-require-imports": "error",
+        "newline-before-return": "error",
         "arrow-parens": ["off", "always"],
         "comma-dangle": "error",
         "eqeqeq": ["error", "always"],
