Configurado eslint y prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["deserializa", "devkit", "fontawesome", "fortawesome", "popperjs", "redirecciona", "toastr"]
+  "cSpell.words": [
+    "deserializa",
+    "devkit",
+    "fontawesome",
+    "fortawesome",
+    "linebreak",
+    "plusplus",
+    "popperjs",
+    "redirecciona",
+    "toastr"
+  ]
 }
