--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,10 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "parserOptions": {
-        "project": ["tsconfig.json", "e2e/tsconfig.json"],
-        "createDefaultProgram": true
-      },
       "extends": [
-        "plugin:@angular-eslint/ng-cli-compat",
-        "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
@@ -54,7 +51,6 @@
         "arrow-parens": ["off", "always"],
         "comma-dangle": "error",
         "eqeqeq": ["error", "always"],
-        "import/order": "error",
         "linebreak-style": ["error", "unix"],
         "max-classes-per-file": ["error", 1],
         "max-lines": ["error", 600],
@@ -74,7 +70,7 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "extends": ["plugin:@angular-eslint/template/recommended", "plugin:@angular-eslint/template/accessibility"],
       "rules": {}
     }
   ]
