--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,7 @@
   "tabWidth": 2,
   "semi": true,
   "bracketSpacing": true,
+  "bracketSameLine": true,
   "endOfLine": "lf",
   "arrowParens": "always",
   "overrides": [
