Anadida regla eslint @typescript-eslint/padding-line-between-statements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,16 @@
         ],
         "no-redeclare": "error",
         "no-useless-constructor": "off",
-        "space-before-function-paren": ["error", "never"]
+        "space-before-function-paren": ["error", "never"],
+        "padding-line-between-statements": "off",
+        "@typescript-eslint/padding-line-between-statements": [
+          "error",
+          {
+            "blankLine": "always",
+            "prev": "block-like",
+            "next": "block-like"
+          }
+        ]
       }
     },
     {
