Implementacion basica de localizacion

--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "allowedCommonJsDependencies": ["dayjs"],
             "assets": [
               "src/favicon.ico",
               "src/assets",
