Anadido prefijo aw a los paths de tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,17 +21,17 @@
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
     "paths": {
-      "@components/*": ["src/app/components/*"],
-      "@core/*": ["src/app/core/*"],
-      "@guards/*": ["src/app/guards/*"],
-      "@interceptors/*": ["src/app/interceptors/*"],
-      "@models/*": ["src/app/models/*"],
-      "@pipes/*": ["src/app/pipes/*"],
-      "@services/*": ["src/app/services/*"],
-      "@store/*": ["src/app/store/*"],
-      "@validators/*": ["src/app/validators/*"],
-      "@views/*": ["src/app/views/*"],
-      "@environments/*": ["src/environments/*"]
+      "@aw/components/*": ["src/app/components/*"],
+      "@aw/core/*": ["src/app/core/*"],
+      "@aw/guards/*": ["src/app/guards/*"],
+      "@aw/interceptors/*": ["src/app/interceptors/*"],
+      "@aw/models/*": ["src/app/models/*"],
+      "@aw/pipes/*": ["src/app/pipes/*"],
+      "@aw/services/*": ["src/app/services/*"],
+      "@aw/store/*": ["src/app/store/*"],
+      "@aw/validators/*": ["src/app/validators/*"],
+      "@aw/views/*": ["src/app/views/*"],
+      "@aw/environments/*": ["src/environments/*"]
     }
   },
   "angularCompilerOptions": {
