--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
