--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             ],
             "styles": ["src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": ["src/scss", "node_modules/bootstrap/scss"]
+              "includePaths": ["src/scss"]
             },
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
