--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -26,7 +27,7 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^11.0.2",
-    "ngx-perfect-scrollbar": "^10.1.1",
+    "ngx-scrollbar": "^13.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
