--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@ng-select/ng-select": "^11.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.4.3",
+    "moment-timezone": "^0.5.43",
     "ngx-bootstrap": "^11.0.2",
     "ngx-scrollbar": "^13.0.3",
     "ngx-toastr": "^17.0.2",
@@ -43,6 +44,7 @@
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.10",
     "@types/jasmine": "~4.3.0",
+    "@types/luxon": "^3.3.3",
     "@typescript-eslint/eslint-plugin": "6.9.0",
     "@typescript-eslint/parser": "6.9.0",
     "eslint": "^8.52.0",
