--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "allowedCommonJsDependencies": ["dayjs"],
+            "allowedCommonJsDependencies": ["moment-timezone"],
             "assets": [
               "src/favicon.ico",
               "src/assets",
