--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-scrollbar": "^13.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
