--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-select/ng-select": "^11.2.0",
     "@popperjs/core": "^2.11.8",
+    "@vvo/tzdb": "^6.110.0",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.3",
-    "moment-timezone": "^0.5.43",
     "ngx-bootstrap": "^11.0.2",
     "ngx-scrollbar": "^13.0.3",
     "ngx-toastr": "^17.0.2",
