Fix orden en router

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,8 @@
   },
   // Code Spell Checker.
   "cSpell.words": [
+    "apexcharts",
+    "Apexcharts",
     "datetime",
     "dayjs",
     "deserializa",
