--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ng-select/ng-select": "^11.2.0",
     "@popperjs/core": "^2.11.8",
     "@vvo/tzdb": "^6.110.0",
+    "apexcharts": "^3.44.0",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.3",
+    "ng-apexcharts": "^1.8.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-device-detector": "^6.0.2",
     "ngx-scrollbar": "^13.0.3",
