--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
   "cSpell.words": [
     "apexcharts",
     "Apexcharts",
+    "datepicker",
+    "Datepicker",
     "datetime",
     "dayjs",
     "deserializa",
