--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "fontawesome",
     "fortawesome",
     "friday",
+    "geolocalización",
     "inicialización",
     "linebreak",
     "luxon",
