--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
         "no-console": "error",
         "no-array-constructor": "error",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-function-return-type": "error",
         "@typescript-eslint/member-ordering": ["error", { "classes": ["field", "constructor", "method"] }],
         "@angular-eslint/component-selector": [
           "error",
