--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.3.2",
     "@angular/router": "^17.3.2",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@microsoft/signalr": "^8.0.0",
     "@ng-select/ng-select": "^12.0.7",
     "@popperjs/core": "^2.11.8",
     "@vvo/tzdb": "^6.126.0",
