--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
     "Apexcharts",
     "datepicker",
     "Datepicker",
+    "Daterangepicker",
     "datetime",
     "dayjs",
     "deserializa",
