Implementado dateIncrementOffset y dateDecrementOffset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,10 @@
     "Daterangepicker",
     "datetime",
     "dayjs",
+    "decrementa",
+    "Decrementa",
+    "decrementado",
+    "decrementar",
     "deserializa",
     "devkit",
     "fontawesome",
