Crear y actualizar evento

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,15 +7,22 @@
     "deserializa",
     "devkit",
     "dhutaryan",
+    "friday",
     "geolocalización",
     "inicialización",
     "luxon",
+    "monday",
+    "saturday",
     "setear",
     "seteo",
     "sidenav",
+    "sunday",
     "thednp",
     "theming",
+    "thursday",
     "timepicker",
-    "tzdb"
+    "tuesday",
+    "tzdb",
+    "wednesday"
   ]
 }
