--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,22 +7,15 @@
     "deserializa",
     "devkit",
     "dhutaryan",
-    "friday",
     "geolocalización",
     "inicialización",
     "luxon",
-    "monday",
-    "saturday",
     "setear",
     "seteo",
     "sidenav",
-    "sunday",
     "thednp",
     "theming",
-    "thursday",
     "timepicker",
-    "tuesday",
-    "tzdb",
-    "wednesday"
+    "tzdb"
   ]
 }
