--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
     "@material-design-icons/font": "^0.14.13",
-    "@microsoft/signalr": "^7.0.12",
-    "@thednp/color-picker": "^2.0.0-alpha10",
-    "@vvo/tzdb": "^6.130.0",
+    "@microsoft/signalr": "^8.0.0",
+    "@thednp/color-picker": "2.0.0-alpha10",
+    "@vvo/tzdb": "^6.138.0",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
@@ -47,8 +47,8 @@
     "@angular/localize": "^17.3.8",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.4.2",
-    "@typescript-eslint/eslint-plugin": "7.2.0",
-    "@typescript-eslint/parser": "7.2.0",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
