Renombrado Consumed a ConsumedDays

--- a/angular.json
+++ b/angular.json
@@ -135,6 +135,9 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@angular-eslint/schematics"]
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": false
   }
 }
